// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterScore Expand filter 1`] = `
<div class="filter__row">
  <!---->
  <div class="filter__row__content">
    <p class="filter__label">Score:</p>
    <div class="filter__item filter__item--score filter__item--open">
      <div class="score-content">
        <vega-lite data="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" autosize="[object Object]" config="[object Object]" mark="area" encoding="[object Object]" class="score"></vega-lite>
      </div>
    </div>
    <div class="filter__item filter__item--score expanded">
      <div class="score-content">
        <p class="range__panel">
          0 to 1
        </p>
        <vega-lite data="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" autosize="[object Object]" config="[object Object]" mark="area" encoding="[object Object]" class="score"></vega-lite>
        <div class="range__container">
          <base-range height="4" dotsize="20" min="0" max="100" interval="1" show="true"></base-range>
        </div>
      </div>
      <div class="filter__buttons">
        <base-button class="primary outline">Cancel</base-button>
        <base-button class="primary">Apply</base-button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterScore renders properly 1`] = `
<div class="filter__row">
  <!---->
  <div class="filter__row__content">
    <p class="filter__label">Score:</p>
    <div class="filter__item filter__item--score">
      <div class="score-content">
        <vega-lite data="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" autosize="[object Object]" config="[object Object]" mark="area" encoding="[object Object]" class="score"></vega-lite>
      </div>
    </div>
    <!---->
  </div>
</div>
`;
